# WendyOS

./: .gitignore  AGENTS.md  DEVELOPMENT.md  INSTALL.md  Makefile  NOTICE  Package.resolved  Package.swift  README.md  WIP.md  build.ps1  docs  file-sync.plan.md  go.mod  go.sum  kb.e2e-report.plan.md  kb.file-sync-app-cwd.plan.md  kb.graceful-unsupported-ux.plan.md  kb.in-transit-hash.plan.md  kb.swift-e2e-tests.plan.md  kb.wendy-agent-app.plan.md  node_modules  swift-review.md
.claude/: settings.local.json
.github/: actionlint.yaml  dependabot.yml
Documentation/: 2026-06-11-discover-compact-table-design.md  2026-06-15-seekable-zstd-flashing-design.md  2026-06-15-seekable-zstd-flashing-plan.md  2026-06-17-otlp-cloud-export-design.md  2026-06-17-watch-builder-and-apple-container-start-design.md
Examples/ESP32-S31-Korvo-1/main/: CMakeLists.txt  demo_main.c  idf_component.yml
docs/: agent.sh  cli.sh  install-agent.sh  install-cli.sh
go/: 2026-07-02-203538-make-a-pr-in-a-worktree-to-add-support-for-tegraf.txt  Makefile  go.mod  go.sum  integration_test.go  to-be-continued-from-joannis-good-luck-with-this.md
screencast/: .env.example  .gitignore  README.md  closing-card.env  package-lock.json  package.json  scene-plan.tsv  style.css  timeline.json  timeline.schema.json  title-card.env
scripts/: generate-sbom.sh  sbir-search.py
security/: THREAT_MODEL.md  VERIFICATION.md
specs/: 2026-06-25-os-install-section-headers-design.md  2026-06-27-agent-probe-connecting-state-design.md  2026-06-27-build-progress-view-design.md  2026-06-27-tour-ai-setup-first-design.md  (+61 more)
(+1986 files in other folders)
